# advent-of-code

./: .gitignore  README.adoc
2018/day01/: package.json  solution.js  solution.test.js  solve.js
2018/day02/: package.json  solution.js  solution.test.js  solve.js
2018/day03/: README.adoc  package.json  solution.js  solution.test.js  solve.js
2018/day04/: solution.js  solution.test.js  solve.js
2018/day05/: README.adoc  package.json  solution.js  solution.test.js  solve.js
2018/day06/: package.json  solution.js  solution.test.js  solve.js
2018/day07/: package.json  solution.js  solution.test.js  solve.js
2018/day08/: solution.js  solution.test.js  solve.js
2018/day09/: package.json  solution.js  solution.test.js  solve.js
2018/day10/: package.json  solution.js  solution.test.js  solve.js
2018/day11/: README.adoc  package.json  solution.js  solution.test.js  solve.js
2018/day12/: package.json  solution.js  solution.test.js  solve.js
2019/day01/: solution.go
2019/day02/: solution.go
2019/day03/: solution.go
2019/day04/: solution.go
2019/day05/: solution.go
2019/day06/: solution.go
2020/: pyproject.toml
2020/src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  utils.py
2020/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py
2021/: pyproject.toml
2021/aoc2021/: day01.py  day02.py  day03.py
2021/tests/: test_day01.py  test_sanity.py
