[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "Advent of Code 2021"
authors = ["Phillip Verheyden <pverheyden@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
